--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "awssat/laravel-visits": "^4.1",
+        "coderflexx/laravisit": "^1.2",
         "cviebrock/eloquent-sluggable": "^9.0",
+        "cyrildewit/eloquent-viewable": "^6.1",
         "guzzlehttp/guzzle": "^7.2",
         "haruncpi/laravel-id-generator": "^1.1",
         "laravel/framework": "^9.19",
@@ -14,7 +17,8 @@
         "laravel/tinker": "^2.7",
         "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-medialibrary": "^10.0.0",
-        "spatie/laravel-permission": "^5.8"
+        "spatie/laravel-permission": "^5.8",
+        "stevebauman/location": "^6.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
