--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "awssat/laravel-visits": "^4.1",
+        "cagilo/cagilo": "^3.0",
         "coderflexx/laravisit": "^1.2",
         "cviebrock/eloquent-sluggable": "^9.0",
         "cyrildewit/eloquent-viewable": "^6.1",
