--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "realrashid/sweet-alert": "^5.1",
+        "spatie/image-optimizer": "^1.7",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.8",
         "stevebauman/location": "^6.5"
